--- a/style.css
+++ b/style.css
@@ -40,3 +40,12 @@
   margin:20px auto
 }
 
+@media screen and (max-width: 750px) {
+    iframe {
+      max-width: 90% !important;
+      max-height: 90% !important;
+        overflow: visible;
+        background-color: inherit;
+    }
+}
+
