--- a/style.css
+++ b/style.css
@@ -49,3 +49,10 @@
     }
 }
  */
+ 
+ code.has-jax {
+    -webkit-font-smoothing: antialiased;
+    background: inherit !important;
+    border: none !important;
+    font-size: 100%;
+}
